welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:2: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Byte)Int
match expected type ?
while (2 * biscuit=caseOrange + 1) {
         ^RunHalf:2: error: not found: value caseOrange
while (2 * biscuit=caseOrange + 1) {
                   ^