welcome.lessons.welcome.variables.RunHalf.scala.code
var biscuit=0
while (2 * biscuit=caseOrange + 1) {
  avance()
}